--- a/styles/style.css
+++ b/styles/style.css
@@ -1,41 +1,105 @@
-.prueba{
-    width: 250px;  
-    height: 350px; 
-    display: flex; 
-    flex-direction: column;
-    background-color: rgb(2, 2, 2);
-    position: relative;
-    overflow: hidden;   
-    margin: 30px auto;
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
-.prueba > img {
+body{
     width: 100%;
-    position: relative;
-}
-.contenido{
-    width: 100%;
-    color: white;
-    font-size: 20px;
-    font-family: 'Courier New', Courier, monospaces;
-    position: absolute;
+    background-color: rgb(36, 35, 35);
     display: flex;
     flex-direction: column;
-    text-align: center;
-    visibility: hidden;
-    margin-top: 100px;
 }
-.prueba:hover{
-    cursor: pointer;
-    scale: 1.1;
-    transition: all 300ms;
+header{
+    width: 100%;
+    display: flex;
 }
-.prueba:hover > .contenido{
-    visibility: visible;
-    transition: all 300ms;
-    margin-top: -10px;
+nav{
+    width: 100%;
+    display: flex;
+    padding: 0 25px 0 25px;
+    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.692);
+    align-items: flex-start;
+    position: fixed;
+}
+.img{
+    width: 22%;
+    margin: 0 1% ;
 
 }
-.prueba:hover > img{
-    filter: opacity(0.3);
+.img > img{
+    width: 100%;
+}
+.menu{
+    width: 50%;
+    display: flex;
+    align-self: center;
+}
+ul{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-self: center;
+}
+label img{
+    width: 24px;
+    margin: 0 3px;
+}
+ul li{
+    list-style: none;
+    display:flex;
+    align-items: center;
+    padding: 18px 5px;
     transition: all 300ms;
+    cursor: pointer;
+}
+ul li a {
+    text-decoration: none;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+.buscar{
+    width: 35%;
+    display: flex;  
+    align-self: center;
+
+}
+.subbus{
+    width: 60%;
+    display: flex;
+    padding: 5px;
+    align-items: stretch;
+    border: 1px solid transparent;
+}
+input{
+    font-size: 14px;
+    display:flex;
+    text-align: left;
+    background: none;
+    outline: none;
+    color: white;
+
+}
+li:hover{
+    background-color: rgba(79, 83, 83, 0.473);
+}
+.subbus:hover{
+    border: solid 1px rgb(18, 115, 180);
+    background: rgba(0, 0, 0, 0.705);
+}
+
+
+
+
+
+
+
+main{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    height: 1000px;
+    background-color: blue;
+    margin: 6.5% 0;
 }
